# Physicpp

./: .clang-format  Body.cpp  Body.hpp  CMakeLists.txt  Collision.cpp  Collision.hpp  Mass.hpp  Material.hpp  Matrix.hpp  main.cpp
physic++/: AABB.cpp  AABB.hpp  Body.cpp  Body.hpp  CMakeLists.txt  Circle.cpp  Circle.hpp  Collision.cpp  Collision.hpp  CollisionSolver.cpp  CollisionSolver.hpp  IBody.cpp  IBody.hpp  IShape.hpp  Mass.hpp  Material.hpp  Matrix.hpp  Movable.hpp  Object.cpp  Object.hpp  Particle.cpp  Particle.hpp  RigidBody.hpp  Rotatable.hpp  Shape.hpp  Touchable.hpp  World.cpp  World.hpp
physic++/primitives/: Movable.hpp  Rotatable.hpp  Touchable.hpp
physic++/utils/: Convert.hpp  Mass.hpp  Material.hpp  Matrix.hpp
test/: CMakeLists.txt  MatrixTest.cpp
testing/: CMakeLists.txt
testing/mocks/: IShapeMock.hpp
testing/tests/: CollisionTest.cpp  MassTest.cpp  MatrixTest.cpp  WorldTest.cpp  main.cpp
tests/: CMakeLists.txt  CircleTest.cpp  CollisionTest.cpp  IBodyMock.hpp  MassTest.cpp  MatrixTest.cpp  ObjectMock.hpp  WorldTest.cpp  main.cpp
tests/mocks/: IShapeMock.hpp
